--- a/css/_legalisation.scss
+++ b/css/_legalisation.scss
@@ -3,10 +3,10 @@
     h2 {
         color: #4b4a4a;
         font-family: Golos;
-        font-size: 27px;
+        font-size: 24px;
         font-weight: 700;
-        line-height: 27px;
-        margin-bottom: 24px;
+        line-height: 24px;
+        margin: 0 0 24px 16px;
     }
     h3 {
         font-family: Golos;
