--- a/css/_viza.scss
+++ b/css/_viza.scss
@@ -1,75 +1,56 @@
 .viza__section {
-  padding: 100px 16px 16px;
+    padding: 100px 16px 16px;
+    h2 {
+        color: #4b4a4a;
+        font-family: Golos;
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 27px;
+        margin-bottom: 16px;
 
-  h2 {
-      color: #4b4a4a;
-      font-family: Golos;
-      font-size: 27px;
-      font-weight: 700;
-      line-height: 27px;
-      margin-bottom: 16px;
-
-      @include for-phone-only {
-          font-size: 24px;
-          line-height: 29px;
-      }
-  }
-  h3 {
-      font-family: Golos;
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 19px;
-      color: #4b4a4a;
-      margin: 16px 0;
-  }
-  .links {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      .entry__link {
-          margin-bottom: 16px;
-          i {
-              margin-right: 8px;
-              font-size: 18px;
-              color: rgb(94, 164, 221);
-          }
-      }
-  }
-  
-  h4 {
-      font-family: Golos;
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 19px;
-      color: #4b4a4a;
-      margin: 16px 0;
-  }
-  h5 {
-      font-family: Golos;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 19px;
-      color: #4b4a4a;
-      margin: 16px 0;
-  }
-  p {
-      font-family: Golos;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 19px;
-      color: #4b4a4a;
-      margin-bottom: 8px;
-  }
-  ol {
-      list-style: inside decimal;
-      li {
-          font-family: Golos;
-          font-size: 16px;
-          font-weight: 500;
-          line-height: 19px;
-          color: #4b4a4a;
-          margin-bottom: 16px;
-      }
-  }
-
+        @include for-phone-only {
+            font-size: 24px;
+            line-height: 29px;
+        }
+    }
+    h3 {
+        font-family: Golos;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin: 16px 0;
+    }
+    .links {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        .entry__link {
+            margin-bottom: 16px;
+            i {
+                margin-right: 8px;
+                font-size: 18px;
+                color: rgb(94, 164, 221);
+            }
+        }
+    }
+    p {
+        font-family: Golos;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+    }
+    // ol {
+    //     list-style: inside decimal;
+    //     li {
+    //         font-family: Golos;
+    //         font-size: 16px;
+    //         font-weight: 500;
+    //         line-height: 19px;
+    //         color: #4b4a4a;
+    //         margin-bottom: 16px;
+    //     }
+    // }
 }
