--- a/css/_index.scss
+++ b/css/_index.scss
@@ -52,55 +52,92 @@
     }
 
     .lessons {
-      min-height: 250px;
-      padding: 16px 0 16px 200px;
+      min-height: 400px;
+      padding: 16px;
       background-image: url(../img/Slider-1-background.jpg);
-      background-position: top;
+      background-position: right;
       background-size: cover;
       background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      @include for-phone-only {
+        justify-content: flex-start;
+      }
+
+      @include for-tablet-portrait {
+        background-image: url(../img/Slider-1-background-phone.jpg);
+        background-position: right;
+        padding: 16px;
+        min-height: 300px;
+      }
       @include for-phone-only {
         background-image: url(../img/Slider-1-background-phone.jpg);
         background-position: right;
         background-size: cover;
         padding: 16px;
+        min-height: 250px;
       }
       h3 {
-        font-size: 24px;
+        font-size: 27px;
         font-weight: 700;
-        line-height: 27px;
+        line-height: 34px;
         color: #4b4a4a;;
-        margin: 32px 0 8px;
+        margin: 24px 0 8px 150px;
         span {
           color: #cc0001;
         }
+        @include for-phone-only {
+          font-size: 21px;
+          line-height: 24px;
+          margin: 0 0 16px 24px;
+        }
       }
       .text {
-        font-size: 16px;
+        font-size: 21px;
         font-weight: 700;
-        line-height: 21px;
+        line-height: 27px;
         color: #4b4a4a;
-        margin: 16px 0 8px;
+        margin: 0 0 0 150px;
         span {
           color: #cc0001;
+        }
+        @include for-phone-only {
+          font-size: 16px;
+          line-height: 21px;
+          margin: 0 0 0 24px;
         }
       }
     }
     .meet {
       text-align: center;
-      min-height: 250px;
+      min-height: 400px;
       padding: 16px;
       background-image: url(../img/Slider-2-background.jpg);
       background-position: top;
       background-size: cover;
       background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      @include for-tablet-portrait {
+        background-image: url(../img/Slider-2-background.jpg);
+        background-position: right;
+        padding: 16px;
+        min-height: 300px;
+      }
       @include for-phone-only {
         background-position: center;
         background-size: cover;
+        min-height: 250px;
       }
       h3 {
-        font-size: 21px;
+        font-size: 24px;
         font-weight: 700;
-        line-height: 27px;
+        line-height: 34px;
         color: white;
         margin: 32px 0 8px;
       }
