--- a/css/_money.scss
+++ b/css/_money.scss
@@ -4,34 +4,45 @@
     h2 {
         color: #4b4a4a;
         font-family: Golos;
-        font-size: 19px;
+        font-size: 21px;
         font-weight: 700;
         line-height: 27px;
         margin-bottom: 16px;
-        margin-bottom: 16px;
     }
+    h3 {
+        font-family: Golos;
+        font-size: 19px;
+        font-weight: 700;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 16px;
+        span {
+            color: #a326f7;
+            margin-bottom: 8px;
+            font-weight: 500;
+        }
+    }
+    h4 {
+        font-family: Golos;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+        span {
+            color: #e21b88;
+        }
+    }
+    
     p {
         font-family: Golos;
         font-size: 16px;
         font-weight: 500;
         line-height: 19px;
-        margin-bottom: 8px;
-        color: #4b4a4a;
-        span {
-            color: #cc0001;
-        }
-    }
-    h3 {
-        color: #4b4a4a;
-        font-family: Golos;
-        font-size: 19px;
-        font-weight: 700;
-        line-height: 27px;
         margin-bottom: 16px;
+        color: #4b4a4a;
         span {
             color: #e21b88;
-            margin-bottom: 8px;
-            font-weight: 500;
         }
     }
     ul {
@@ -48,9 +59,9 @@
             li {
                 list-style: decimal inside;
                 font-family: Golos;
-                font-size: 14px;
+                font-size: 16px;
                 font-weight: 500;
-                line-height: 14px;
+                line-height: 19px;
                 color: #4b4a4a;
                 margin-bottom: 8px;
                 span {
@@ -60,18 +71,6 @@
             }
         }
     }
-    h4 {
-        font-family: Golos;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 19px;
-        color: #4b4a4a;
-        margin-bottom: 16px;
-        span {
-            color: #cc0001;
-            font-weight: 500;
-        }
-    }
     .links {
         margin-bottom: 16px;
     }
@@ -79,9 +78,9 @@
         li {
             list-style: decimal inside;
             font-family: Golos;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 500;
-            line-height: 14px;
+            line-height: 19px;
             color: #4b4a4a;
             margin-bottom: 8px;
             span {
