--- a/css/_money.scss
+++ b/css/_money.scss
@@ -14,7 +14,7 @@
         font-size: 19px;
         font-weight: 700;
         line-height: 19px;
-        color: #4b4a4a;
+        color: #e21b88;
         margin-bottom: 16px;
         span {
             color: #a326f7;
@@ -30,6 +30,7 @@
         color: #4b4a4a;
         margin-bottom: 8px;
         span {
+            font-weight: 600;
             color: #e21b88;
         }
     }
