--- a/css/_viza.scss
+++ b/css/_viza.scss
@@ -18,7 +18,7 @@
         font-size: 16px;
         font-weight: 700;
         line-height: 19px;
-        color: #4b4a4a;
+        color: #e21b88;
         margin: 16px 0;
     }
     .links {
