--- a/css/_header.scss
+++ b/css/_header.scss
@@ -24,6 +24,7 @@ header {
         justify-content: flex-start;
         @include for-tablet-portrait {
             justify-content: space-between;
+            padding: 0;
         }
         align-items: center;
         box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
@@ -33,12 +34,11 @@ header {
 
             .navigation__img {
                 width: 100%;
-                // margin-right: 20px;
             }
 
             @include for-tablet-portrait {
                 order: 1;
-                width: 20%;
+                width: 22%;
             }
 
             @include for-phone-only {
@@ -180,22 +180,18 @@ header {
                     font-weight: 600;
                     text-decoration: none;
                     transition-duration: .25s;
-
                     &:hover {
                         background-color: #cc0001;
                         color: #cc0001;
                     }
-
                     &::selection {
-                        background-color: #cc9f9f;
+                        background-color: #cc9f9f8a;
                     }
                 }
             }
-
             @include for-tablet-portrait {
                 display: block;
             }
-
             @include for-phone-only {
                 display: block;
             }
