--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,7 @@ header .nav__container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding: 0;
   }
 }
 header .nav__container .navigation__home {
@@ -483,7 +484,7 @@ header .nav__container .navigation__home .navigation__img {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
-    width: 20%;
+    width: 22%;
   }
 }
 @media (max-width: 599px) {
@@ -643,10 +644,10 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #cc0001;
 }
 header .nav__container .navigation__mobile .navigation-mobile__box .navigation-mobile__item::-moz-selection {
-  background-color: #cc9f9f;
+  background-color: #cc9f9f8a;
 }
 header .nav__container .navigation__mobile .navigation-mobile__box .navigation-mobile__item::selection {
-  background-color: #cc9f9f;
+  background-color: #cc9f9f8a;
 }
 @media (max-width: 870px) {
   header .nav__container .navigation__mobile {
@@ -688,12 +689,24 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
   color: #4b4a4a;
 }
+@media (max-width: 599px) {
+  .container .title__section h2 {
+    font-size: 24px;
+    font-weight: 600;
+  }
+}
 .container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
   line-height: 43px;
   color: #4b4a4a;
+}
+@media (max-width: 599px) {
+  .container .title__section h1 {
+    font-size: 32px;
+    font-weight: 600;
+  }
 }
 .container .carousel .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff0000'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
@@ -732,27 +745,22 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
       -ms-flex-align: start;
           align-items: flex-start;
 }
-@media (max-width: 599px) {
-  .container .carousel .lessons {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-}
-@media (max-width: 768px) {
+@media (min-width: 599px) and (max-width: 870px) {
   .container .carousel .lessons {
     background-image: url(../img/Slider-1-background-phone.jpg);
-    background-position: right;
+    background-position: bottom;
     padding: 16px;
     min-height: 300px;
   }
 }
 @media (max-width: 599px) {
   .container .carousel .lessons {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     background-image: url(../img/Slider-1-background-phone.jpg);
     background-position: right;
     background-size: cover;
-    padding: 16px;
     min-height: 250px;
   }
 }
@@ -761,10 +769,18 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-weight: 700;
   line-height: 34px;
   color: #4b4a4a;
-  margin: 24px 0 8px 150px;
+  margin-left: 100px;
 }
 .container .carousel .lessons h3 span {
+  font-weight: 600;
   color: #cc0001;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .container .carousel .lessons h3 {
+    font-size: 21px;
+    line-height: 24px;
+    margin: 0 0 16px 80px;
+  }
 }
 @media (max-width: 599px) {
   .container .carousel .lessons h3 {
@@ -778,10 +794,18 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-weight: 700;
   line-height: 27px;
   color: #4b4a4a;
-  margin: 0 0 0 150px;
+  margin: 16px 0 0 100px;
 }
 .container .carousel .lessons .text span {
+  font-weight: 600;
   color: #cc0001;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .container .carousel .lessons .text {
+    font-size: 21px;
+    line-height: 24px;
+    margin: 0 0 16px 80px;
+  }
 }
 @media (max-width: 599px) {
   .container .carousel .lessons .text {
@@ -812,7 +836,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
       -ms-flex-align: center;
           align-items: center;
 }
-@media (max-width: 768px) {
+@media (min-width: 599px) and (max-width: 870px) {
   .container .carousel .meet {
     background-image: url(../img/Slider-2-background.jpg);
     background-position: right;
@@ -881,7 +905,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   text-decoration: none;
   width: 20%;
 }
-@media (max-width: 768px) {
+@media (min-width: 599px) and (max-width: 870px) {
   .rent__section .rent__box .rent__link {
     width: 33%;
   }
@@ -897,7 +921,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -webkit-transition: 0.3s;
   transition: 0.3s;
   border-radius: 5px;
-  min-height: 200px;
+  height: 150px;
   margin: 16px;
   padding: 16px;
   display: -webkit-box;
@@ -914,15 +938,13 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
       -ms-flex-align: center;
           align-items: center;
 }
-@media (max-width: 768px) {
+@media (min-width: 599px) and (max-width: 870px) {
   .rent__section .rent__box .rent__link .rent__item {
-    min-height: 150px;
     margin: 8px;
   }
 }
 @media (max-width: 599px) {
   .rent__section .rent__box .rent__link .rent__item {
-    min-height: 120px;
     padding: 16px 8px 8px;
   }
 }
@@ -930,26 +952,27 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+.rent__section .rent__box .rent__link .rent__item i {
+  font-size: 54px;
+  color: #880a77;
+  margin-bottom: 8px;
+  margin: 16px 0 8px;
+}
+.rent__section .rent__box .rent__link .rent__item .fa-telegram {
+  color: #3390ec;
+}
+.rent__section .rent__box .rent__link .rent__item .fa-facebook-square {
+  color: #0674e7;
+}
 .rent__section .rent__box .rent__link .rent__item .rent__logo {
-  width: 50%;
-  margin-bottom: 16px;
-}
-@media (max-width: 768px) {
-  .rent__section .rent__box .rent__link .rent__item .rent__logo {
-    width: 40%;
-  }
-}
-@media (max-width: 599px) {
-  .rent__section .rent__box .rent__link .rent__item .rent__logo {
-    width: 40%;
-    margin-bottom: 8px;
-  }
+  width: 68%;
+  margin: 16px;
 }
 .rent__section .rent__box .rent__link .rent__item .rent__title {
   font-family: Golos;
   font-size: 14px;
-  font-weight: 400;
-  color: #4b4a4a;
+  font-weight: 500;
+  color: #e21b88;
   margin-bottom: 16px;
   text-align: center;
 }
@@ -986,9 +1009,9 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section h3 {
   font-family: Golos;
   font-size: 19px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
-  color: #4b4a4a;
+  color: #e21b88;
   margin: 16px 0;
 }
 .entry__section h4 {
@@ -1048,7 +1071,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
-  margin: 0 0 24px 16px;
+  margin-bottom: 24px;
 }
 .legalisation__section h3 {
   font-family: Golos;
@@ -1098,7 +1121,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .legalisation__section .demo .apostil h4 {
   font-family: Golos;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
   color: #cc0001;
   margin-bottom: 16px;
@@ -1154,7 +1177,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .legalisation__section .demo .residence h4 {
   font-family: Golos;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
   color: #cc0001;
   margin: 16px 0;
@@ -1182,6 +1205,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-bottom: 8px;
 }
 .legalisation__section .demo .residence ul li span {
+  font-weight: 600;
   color: #e21b88;
 }
 .legalisation__section .demo .residence h6 {
@@ -1341,7 +1365,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-size: 19px;
   font-weight: 700;
   line-height: 19px;
-  color: #4b4a4a;
+  color: #e21b88;
   margin-bottom: 16px;
 }
 .money__section h3 span {
@@ -1358,6 +1382,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-bottom: 8px;
 }
 .money__section h4 span {
+  font-weight: 600;
   color: #e21b88;
 }
 .money__section p {
@@ -1439,9 +1464,9 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .fop__section h3 {
   font-family: Golos;
   font-size: 19px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
-  color: #4b4a4a;
+  color: #e21b88;
   margin-bottom: 8px;
 }
 .fop__section h3 span {
@@ -1514,7 +1539,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .about__section .item .title h3 {
   font-family: Golos;
   font-size: 19px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
   color: #e21b88;
   margin-bottom: 16px;
@@ -1595,7 +1620,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-size: 16px;
   font-weight: 700;
   line-height: 19px;
-  color: #4b4a4a;
+  color: #e21b88;
   margin: 16px 0;
 }
 .viza__section .links {
@@ -1641,7 +1666,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .vaccinations__section h3 {
   font-family: Golos;
   font-size: 19px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 19px;
   color: #e21b88;
   margin: 16px 0;
